--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -25,7 +25,7 @@ eleventyComputed:
    <h3>Socials</h3>
    <p>I'm slowly moving away from centralized social media, <i>in theory</i>. In practice, I'm still fairly active on these accounts. I'm spending more time on Mastodon these days</p>
    <ul>
-      <li>Instagram: <a href="https://instagram.com/jasondotgov" rel="me" tilte="my instagram">@jasondotgov</a></li>
+      <li>Instagram: <a href="https://instagram.com/fromjason.xyz" rel="me" tilte="my instagram">@fromjason.xyz</a></li>
       <li>Threads: <a href="https://www.threads.net/@jasondotgov" rel="me" title="my threads">@jasondotgov</a></li>
       <li>Mastodon: <a href="https://mastodon.social/@fromjason" rel="me" title="my mastadon">@fromjason</a></li>
     <li>Signal: fromjason.01</li>
