--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -25,11 +25,11 @@ eleventyComputed:
    <h3>Socials</h3>
    <p>I'm slowly moving away from centralized social media, <i>in theory</i>. In practice, I'm still fairly active on these accounts. I'm spending more time on Mastodon these days</p>
    <ul>
-      <li>~~Facebook:~~</li>
-      <li>~~Twitter:~~</li>
+      <li>Facebook: *Deleted*</li>
+      <li>Twitter: *Deleted*</li>
       <li>Instagram: <a href="https://instagram.com/fromjason.xyz" rel="me" title="my instagram">@fromjason.xyz</a></li>
-      <li>~~Threads:~~</li>
-      <li>~~Tiktok:~~</li> 
+      <li>Threads: *Deleted*</li>
+      <li>Tiktok: *Deleted*</li> 
       <li>Mastodon: <a href="https://mastodon.social/@fromjason" rel="me" title="my mastadon">@fromjason</a></li>
     <li>Signal: fromjason.01</li>
    </ul>
